# Autoregia

./: .gitignore  AGENTS.md  README.md  about.html  app.py  ayuda.md  decision.md  docs.html  index.html  logos.log.md  prototype.html  pyproject.toml  requirements.txt  run.py  todo.html  todo.md
aias/: requirements.txt  server.py
aoos/: README.md  server.py
asrs/: README.md  index.html  server.py
audit/: 2025-Cognitive-Development-Strategy.md
awes/: Dockerfile  README.md  docker-compose.yml  server.py  test_awes.py
backend/: __init__.py  app.py  db.py  prsl.py  seed.py
daily/: README.md  design.md  incoming.md  savepoint.sh
data/: prs.db  seed.json
design/: Philosophia Naturalis.md  README.md  client.html  client.md  gramar.ebnf  records_schema.json  spec.md
loop/: server.py
meta/: README.md  pam.md  rf.md
pais/: README.md  analytics.py  collector.py  jobs.py  requirements.txt  server.py  tasks.py  worker.py
peos/: README.md  __init__.py  analytics.py  clustering.py  collector.py  import_nitter_handles.py  requirements.txt  server.py  test_peos.py
pkts/: README.md  collector.py  index.html  jobs.py  server.py  tasks.py  worker.py
pps/: README.md  index.html  server.py
pras/: README.md  index.html  server.py
praxis/: README.md
prs/: server.py
ptocs/: README.md  server.py
pwos/: README.md  requirements.txt  server.py
reflex/: README.md  consilium annuum.md  daily.md
scripts/: week-now.py
shared/: __init__.py  focus_watcher.py
spec/: README.md  about.md  ui.spec
static/: index.html
storage/: __init__.py  couchdb_store.py
(+333 files in other folders)
