[project]
name = "prs"
version = "0.1.0"
description = "Personal Recording System (PRS): PRSL core, storage, and HTTP API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "PRS" }]
dependencies = [
    "Flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "backend.prsl"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]  # line length handled by formatter; keep long descriptive lines

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
python_files = ["test_*.py"]
